ルートページを作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="bg-light p-3 border-top">
+      <h1 class="display-5">Ru-n-by</h1>
+      <p class="lead">Rubyのお試し実行環境</p>
+    </div>
+    
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
