--- a/app/views/executions/index.html.erb
+++ b/app/views/executions/index.html.erb
@@ -2,17 +2,30 @@
 
 <h1>Executions</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>実行日時</th>
+      <th>結果</th>
+      <th>文字数</th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @executions.each do |execution| %>
       <tr>
-        <td><%= link_to 'Show', execution %></td>
+        <%# 実行日時 %>
+        <td><%= execution.created_at.in_time_zone("Tokyo") %></td>
+
+        <%# 結果 %>
+        <td><%= execution_result_to_string(execution) %></td>
+
+        <%# 文字数 %>
+        <td><%= execution.program.length %></td>
+
+        <%# 表示リンク %>
+        <td><%= link_to "表示", execution, class: "btn btn-info" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -20,4 +33,4 @@
 
 <br>
 
-<%= link_to 'New Execution', new_execution_path %>
+<%= link_to "新規実行", new_execution_path, class: "btn btn-primary" %>
